kubernetes/apps/home/zigbee2mqtt/app/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: &app zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      securityContext:
        fsGroup: 568
      containers:
        - name: main
          image: ghcr.io/koenkk/zigbee2mqtt:2.14.2@sha256:addbfb08fcef2e4477de1535636118241e10d13e898fbe4d9faba8a4d7396311
          ports:
            - containerPort: &port 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: *port
            failureThreshold: 5
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: *port
            failureThreshold: 5
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 250M
            limits:
              memory: 250M
          volumeMounts:
            - name: data
              mountPath: /data
            - name: healthcheck
              mountPath: /healthcheck.sh
              subPath: healthcheck.sh
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: *app
        - name: healthcheck
          configMap:
            name: zigbee2mqtt-healthcheck
            items:
              - key: healthcheck.sh
                path: healthcheck.sh
