kubernetes/apps/home/zigbee2mqtt/app/resources/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-dashboard
spec:
  hostnames: ["zigbee2mqtt.judahrand.net"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          namespace: home
          port: 8080
