kubernetes/apps/home/zigbee2mqtt/app/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.judahrand.net
spec:
  ingressClassName: internal
  rules:
    - host: zigbee2mqtt.judahrand.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
