kubernetes/apps/home/zigbee2mqtt/app/resources/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-dashboard
spec:
  hostnames: ["zigbee2mqtt.judahrand.net"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          namespace: home
          port: 8080
